buildscript {
    repositories {
        mavenCentral()
        jcenter()
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '2.2.6.RELEASE'
}

apply plugin: 'io.spring.dependency-management'

group = 'study.huhao.demo'
version = '1.0.0'
sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
        exclude module: 'junit'
    }
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.5.2'

    implementation('com.google.guava:guava:28.2-jre')

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    runtimeOnly 'mysql:mysql-connector-java'

    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.1'

    implementation 'org.flywaydb:flyway-core'
    testImplementation 'org.flywaydb.flyway-test-extensions:flyway-spring-test:6.0.0'

    testImplementation 'io.rest-assured:rest-assured'

    testImplementation 'com.tngtech.archunit:archunit-junit5-api:0.13.1'
    testRuntimeOnly 'com.tngtech.archunit:archunit-junit5-engine:0.13.1'
}

test {
    useJUnitPlatform()
}
